tests/invalid/RealDiv_Invalid_1.whiley
method main() -> int:
    [int] ls = [1, 2, 3]
    real x = 2.0 / 1.0
    return ls[x]
